crates/carta/tests/snapshots/golden_writer__native__figure__figure-no-alt.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para [ Image ( "" , [] , [] ) [] ( "pic.png" , "" ) ] ]
